--- a/ontoCAT-webpage/WebContent/rsc/css/main.css
+++ b/ontoCAT-webpage/WebContent/rsc/css/main.css
@@ -1,1 +1,62 @@
 @CHARSET "ISO-8859-1";
+
+/* 
+Define logo colours for the whole page 
+Also sets the dark one on all text
+logGreen has to be specified explicitly
+*/
+body {
+	color: #414042;
+	font-family: "Arial", Sans-serif;
+}
+
+.logoGreen {
+	color: #ADD136;
+}
+
+.pageHeader {
+	position: absolute;
+	top: 68px;
+	left: 185px;
+	font-size: 60px;
+}
+
+.footer {
+	text-align: center;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+}
+
+ul.navigationPane {
+	position: relative;
+}
+
+ul.navigationPane li {
+	margin-left: -60px;
+	list-style: none;
+	height: 40px;
+	line-height: 40px;
+}
+
+ul.navigationPane a {
+	text-decoration: none;
+	padding-left:30px;
+	display: block;
+	color: #414042;
+}
+
+ul.navigationPane a:hover {
+	color: #fff;
+	background: #ADD136;
+	font-weight: bold;
+}
+
+ul.navigationPane li.currentPage {
+	font-weight: bold;
+}
+
+h1 {
+	font-size: 20px;
+}
