--- a/ontoCAT-webpage/WebContent/rsc/css/main.css
+++ b/ontoCAT-webpage/WebContent/rsc/css/main.css
@@ -8,6 +8,7 @@ logGreen has to be specified explicitly
 body {
 	color: #414042;
 	font-family: "Arial", Sans-serif;
+	background-color:white;
 }
 
 .logoGreen {
@@ -22,13 +23,14 @@ body {
 	white-space: nowrap;
 }
 
-.footer {
+div.footer {
 	text-align: center;
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
 	font-size: 10px;
+	z-index: -1;
 }
 
 .navigationPane {
@@ -76,10 +78,13 @@ div.mainContent {
 	top: 180px;
 	width: 80%;
 	font-size: 14px;
+	z-index: 10;
+	background-color:white;
 }
 
 .mainContent p {
 	padding-right: 100px;
+	padding-left: 10px;
 }
 
 .mainContent a {
@@ -88,9 +93,15 @@ div.mainContent {
 	color: #80A010;
 }
 
-h1 {
+.mainContent h1 {
 	font-size: 14px;
 	font-weight: bold;
 	width: 300px;
 	border-bottom: 1px solid #414042;
+}
+
+.mainContent h2 {
+	font-size: 14px;
+	font-weight: bold;
+	padding-left: 5px;
 }
