--- a/ontoCAT-restservice/.settings/org.eclipse.wst.common.component
+++ b/ontoCAT-restservice/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="test_cxf">
+    <wb-module deploy-name="ontocat">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="test_cxf"/>
+        <dependent-module archiveName="ontoCAT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ontoCAT/ontoCAT">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path"/>
+        <property name="context-root" value="ontocat"/>
     </wb-module>
 </project-modules>
