--- a/ontoCAT-webpage/WebContent/rsc/css/main.css
+++ b/ontoCAT-webpage/WebContent/rsc/css/main.css
@@ -24,13 +24,14 @@ body {
 }
 
 div.footer {
+	position: fixed;
+	top: auto;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	text-align: center;
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
 	width: 100%;
 	font-size: 10px;
-	z-index: -1;
 }
 
 .navigationPane {
@@ -91,7 +92,6 @@ div.mainContent {
 	font-size: 14px;
 	z-index: 10;
 	background-color: white;
-	padding-bottom: 200px;
 }
 
 .mainContent p {
@@ -133,14 +133,14 @@ div.mainContent {
 }
 
 li {
-	margin-bottom:10px;
+	margin-bottom: 10px;
 }
 
 img.docsImage {
 	display: block;
 	margin-top: 10px;
 	margin-bottom: 30px;
-	padding:5px;
+	padding: 5px;
 	border: 1px solid #414042;
 	margin-right: auto;
 	width: 400px;
